--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,31 @@ matrix:
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+      python:
+        - '3.7'
     - sudo: required
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
         PRE_CMD=linux32
+      python:
+        - '3.7'
 
 install:
   - docker pull $DOCKER_IMAGE
+  - pip install codecov
+  - pip install -r requirements.txt
 
 script:
   - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-wheels.sh
   - mkdir dist -p
   - cp wheelhouse/* dist
   - ls dist/
+  - python setup.py build_ext --inplace
+  - coverage run -m test
+
+after_success:
+  - codecov
 
 deploy:
   provider: pypi
